@@ -1,2 +1,8 @@
 # microdata-metadata-service
 Receives GET and POST requests for data and metadata and returns metadata including link to data binary file.
+
+To start it locally you need Java 15. Command:
+
+
+`java -jar --enable-preview ./build/libs/metadata-service-0.9.0.jar`
+
